Update compatibility.md to warn on Java native access flag usage