@@ -141,12 +141,11 @@ By default, SSI does not instrument some Java applications and libraries to avoi
 - Consider moving some configurations to a `.properties` file
 - Check application logs for specific initialization errors
 
-**Java 24+ warnings**: When using SSI for Java 24+, you may see warnings related to JNI native access or `sun.misc.Unsafe` memory access. These warnings can be suppressed with the `--illegal-native-access=allow` and `--sun-misc-unsafe-memory-access=allow` environment variables. See [JEP 472][3] and [JEP 498][4] for more information.
+**Java 24+ Use of JNI**: SSI uses the `--enable-native-access=ALL-UNNAMED` flag on Java 24+ to enable native access for all code on the class path. This is necessary for products such as Profiling that require native access. See [JEP 472][3] for more information.
 
 [1]: /tracing/trace_collection/compatibility/java/
 [2]: https://github.com/DataDog/dd-trace-java/blob/master/metadata/requirements.json
 [3]: https://openjdk.org/jeps/472
-[4]: https://openjdk.org/jeps/498
 
 {{< /programming-lang >}}
 
